# hikvision

./: Cargo.toml  LICENSE
people-counting/: Cargo.toml
people-counting/src/: basicauth.rs  counting.rs  error.rs  error.rs_bk  lib.rs  macros.rs  main.rs  request.rs
