[package]
name = "people-counting"
version = "0.1.0"
authors = ["Camilo Zapata <camilo.zapata@nebulae.com.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#www-authenticate = "^0.3.0"
openssl = { version = "0.10.29", features = ["vendored"] }
http = "0.2.1"
digest_auth = "0.2.3"
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
xml-rs = "0.8.3"
